# sp1-rollup-simulator

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  input.json
.cargo/: config.toml
rollup-cli/: Cargo.toml
rollup-cli/src/: main.rs
rollup-core/: Cargo.toml
rollup-core-program/: Cargo.toml
rollup-core-program/src/: main.rs
rollup-core/src/: lib.rs
verify-proof/: Cargo.toml
verify-proof/src/: main.rs
