[package]
name = "rollup-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rollup-core = { path = "../rollup-core" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sp1-sdk = { git = "https://github.com/succinctlabs/sp1.git" }
bincode = "1.3"